Story #78377 fixed forecast toolbar alignment.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_forecasting.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_forecasting.scss
@@ -50,3 +50,6 @@
 .select-skilltype {
 	height: 74px;
 }
+.wfm-btn-forecast {
+	margin: 0;
+}
